# HW

./: config.status  configure  configure.ac  funca.cpp  funca.h  homework  main.cpp  makefile  makefile.am  makefile.in  test
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
